# TeviadTest

./: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
src/: logs.py  main.py
src/api/: another_func.py  auth.py  models.py  router.py  settings.py
src/db/: db.py  definitions.py  models.py  operations.py  settings.py
src/db/migrations/: env.py
src/db/migrations/versions/: 5a731c4d0568_0001.py  76cd821fa471_0001.py  bcc84a6b0640_0003.py  c64baa9dedb4_0001.py  fd396579a46a_0002.py
